fix: aligns user avatar to the base of the chat message

--- a/src/app/features/chat/components/chat-detail/chat-detail.component.sass
+++ b/src/app/features/chat/components/chat-detail/chat-detail.component.sass
@@ -23,7 +23,7 @@ main
         gap: 20px
         
         .message
-            @include flex-option($display: flex, $justify-content: null, $align-items: null, $direction: row)
+            @include flex-option($display: flex, $justify-content: null, $align-items: flex-end, $direction: row)
             gap: 15px
 
             .message-content
